--- v1.1 development series ---

FULL LIST

- Prevent certain cases where the conversation arrives too late and the user has
already switched to another message (issue #75).
- Use a real toolbar for buttons, with more options.
- Fix plurals in localizations (issue #76).
- More compatibility with newsgroup messages.
- Improve tooltiptexts.
- Use first names only when enabled.
- Don't reload the conversation when the message set is the same (this should
prevent constant reflows).